<resources>
    <string name="app_name">GroupitAll</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_messsge">Welcome to GroupitAll</string>
    <string name="welcome_message">Welcome to GroupitAll</string>
    <string name="or">OR</string>
    <string name="enter_email">Enter your email address</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="verfication">A verification code will be sent to your phone or email</string>
    <string name="Bt_continue">Continue</string>
    <string name="title_activity_verification">Verification</string>
</resources>
